bubba-frontend (1.2.4.42ubuntu2) claire estelle; urgency=low

  * Changed "Greenfield mode" to "N only mode" 

 -- Tor Krill <tor@excito.com>  Thu, 28 Jan 2010 16:46:38 +0100

bubba-frontend (1.2.4.42ubuntu1) karmic; urgency=low

  * Added functions to start bridge during boot 

 -- PA Nilsson <pa@excito.com>  Thu, 28 Jan 2010 12:43:43 +0100

bubba-frontend (1.2.4.42) claire estelle; urgency=low

  * readding missing wlan-configurable init 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 26 Jan 2010 16:32:04 +0100

bubba-frontend (1.2.4.41) claire estelle; urgency=low

  * cleanup bands in networkmanager so it wont make havock if no card exists
    in the first place.

 -- Carl Fürstenberg <carl@excito.com>  Thu, 21 Jan 2010 18:48:53 +0100

bubba-frontend (1.2.4.40) claire estelle; urgency=low

  * update wlan strings 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 21 Jan 2010 17:57:37 +0100

bubba-frontend (1.2.4.39) claire estelle; urgency=low

  * fix WEP password validation 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 20 Jan 2010 15:48:11 +0100

bubba-frontend (1.2.4.38) claire estelle; urgency=low

  * networkmanager complains "Missing parameter" if empty array for config for
    setdynamic is passed.

 -- Carl Fürstenberg <carl@excito.com>  Tue, 19 Jan 2010 15:14:57 +0100

bubba-frontend (1.2.4.37) claire estelle; urgency=low

  * new wlan interface focusin on band instead of standard 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 18 Jan 2010 18:56:18 +0100

bubba-frontend (1.2.4.36) claire estelle; urgency=low

  * set auto (closes: #1088) 
  * remove set custom profile lines from wanupdate 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 15 Jan 2010 13:45:17 +0100

bubba-frontend (1.2.4.35) claire estelle; urgency=low

  * Only show 5GHz channels for a/n and 2.4GHz channels for b,g, and n. 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 13 Jan 2010 18:20:44 +0100

bubba-frontend (1.2.4.34) claire estelle; urgency=low
